Add: transparent icon and spacing.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
   <link rel='stylesheet' href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'>
 
   <link rel='stylesheet' type='text/css' href="./assets/stylesheets/airtame.css">
+
+  <link rel='prefetch' type='application/json' href="./content.json">
   
 </head>
 
@@ -56,7 +58,7 @@
     </div>
 
     {{#each categories}}
-    <h2>{{title}}</h2>
+    <h2 style="text-align: right;">{{title}}</h2>
     
     <div class="row">
 
