--- a/index.html
+++ b/index.html
@@ -141,16 +141,7 @@
       } else {
       
         console.log("Liked " + name + " " + card.style.background);
-        card.style.background = "rgba(144, 238, 144, 0
-
-          <div class="span12">
-            <div class="input-prepend" style="display: inline;">
-              <span class="add-on"><i class="icon-envelope"></i></span>
-                <input type="text" id="email" name="EMAIL" placeholder="your@email.com">
-              </div>
-         
-              <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn-subscribe" style="margin-left: 5px;">
-          </div>.2)";
+        card.style.background = "rgba(144, 238, 144, 0.2)";
       }
     }
 
