Add: circular image at the end.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     <hr>
 
     <div class="row">
-      <div class="center-block">
+      <div class="col-md-offset-4 col-md-4">
+
+        <div class="circular" style="background-image: url(./assets/images/me.jpg);"></div>
 
         <form role="form" onsubmit="return set_email(this)" class="form-inline" target="_blank">
           
