--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Open+Sans:300'>
   <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Merriweather:400,300,700'>
   <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600'>
   <link rel='stylesheet' type='text/css' href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
