Fix: Using image_path instead of name.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="well">
       <div class="golden-ratio landscape">
         <div class="golden-ratio-container">
-          <div class="picture" style="background-image:url(./assets/images/{{{cover.picture_name}}});"></div>
+          <div class="picture" style="background-image:url({{{cover.picture_path}}});"></div>
         </div>
       </div>
       <h1>{{cover.title}}</h1>
@@ -99,7 +99,7 @@
                     </span>
                   </div>
 
-                  <div class="picture" style="background-image:url(./assets/images/{{{picture_name}}});"></div>
+                  <div class="picture" style="background-image:url({{{picture_path}}});"></div>
                 </div>
               </div>
 
