Mod: center category title.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
 
     {{#each categories}}
-    <h2 style="text-align: right;">{{title}}</h2>
+    <h2 class="category-title">{{title}}</h2>
     
     <div class="row">
 
