Fix: vertical center text.

--- a/index.html
+++ b/index.html
@@ -110,7 +110,11 @@
                 </div>
               </div>
 
-              <p  class="card-description">{{{description}}}</p>
+              <div style="display: table; height: 50%; overflow: hidden;">
+                <div style="display: table-cell; vertical-align: middle;">
+                  <p  class="card-description">{{{description}}}</p>
+                </div>
+              </div>
 
           </div>
         </div>
