--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
   </script>
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/analytics.js/1.3.29/analytics.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1-rc2/jquery.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/analytics.js/2.3.27/analytics.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
   <script>
     var source   = $("#card-template").html();
