--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                 </div>
               </div>
 
-              <div style="display: table; height: 50%; overflow: hidden;">
-                <div style="display: table-cell; vertical-align: middle;">
+              <div class="vertical-center-wrapper">
+                <div class="vertical-center">
                   <p  class="card-description">{{{description}}}</p>
                 </div>
               </div>
