--- a/index.html
+++ b/index.html
@@ -70,14 +70,12 @@
 
   <script id="card-template" type="text/x-handlebars-template">
 
-    <div class="well">
-      <div class="golden-ratio landscape">
-        <div class="golden-ratio-container">
-          <div class="picture" style="background-image:url({{{cover.picture_path}}});"></div>
-        </div>
+    <div class="row card">
+      <div class="col-md-4 picture" style="height:33rem;width:33rem;background-image:url({{{cover.picture_path}}});"></div>
+      <div class="col-md-8">
+        <h1>{{cover.title}}</h1>
+        <p><strong>{{{cover.content}}}</strong></p>
       </div>
-      <h1>{{cover.title}}</h1>
-      <p><strong>{{{cover.content}}}</strong></p>
     </div>
 
     {{#each categories}}
